# substrate

./: .gitignore  .prettierignore  AGENTS.md  Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
codama/: agent_stake.json  attester_registry.json  delegation_engine.json  dispute_resolver.json  identity_registry.json  proof_verifier.json  receipt_emitter.json  reputation_accumulator.json  task_registry.json
crates/trust_substrate_litesvm_tests/: Cargo.toml
crates/trust_substrate_litesvm_tests/src/: lib.rs
crates/trust_substrate_litesvm_tests/tests/: agent_stake.rs  audit_receipts.rs  delegation.rs  domain_stats.rs  handoff_grant.rs  identity_rotation.rs  proof_verifier.rs  protocol_flow.rs  provenance_and_attesters.rs  receipt_chain.rs  reputation_domains.rs  society_world.rs  sybil_gating.rs
docs/: agent-skill.md  architecture.md  archive-durability.md  deployment-readiness.md  development.md  interop.md  off-chain-storage.md  pi-adapter-todo.md  production-readiness.md  programs.md  reputation-model.md  reviewer-guide.md  roadmap.md  scope-tags.md  security.md  testing.md  threat-model.md  verification.md
examples/: README.md
programs/agent_stake/: Cargo.toml  agent_stake.qedspec
programs/agent_stake/src/: events.rs  lib.rs
programs/agent_stake/src/instructions/: finalize_unstake.rs  finalize_unstake_token.rs  identity_stake_activity.rs  initialize_stake.rs  initialize_token_stake.rs  initialize_token_treasury_vault.rs  mod.rs  request_unstake.rs  request_unstake_token.rs  slash.rs  slash_already_applied.rs  slash_token_with_authority.rs  slash_token_with_verdict.rs  slash_with_authority.rs  slash_with_verdict.rs  stake.rs  stake_token.rs
programs/agent_stake/src/state/: mod.rs  slash_marker.rs  stake_account.rs  token_stake_account.rs
programs/attester_registry/: Cargo.toml  attester_registry.qedspec
programs/attester_registry/src/: events.rs  lib.rs
programs/attester_registry/src/instructions/: close_attester.rs  initialize_registry.rs  mod.rs  register_attester.rs  set_attester_tier.rs
programs/attester_registry/src/state/: attester_record.rs  attester_registry_config.rs  mod.rs
programs/delegation_engine/: Cargo.toml  delegation_engine.qedspec
programs/delegation_engine/src/: events.rs  lib.rs
programs/delegation_engine/src/instructions/: create_delegation.rs  mod.rs  revoke_delegation.rs
programs/delegation_engine/src/state/: delegation_record.rs  mod.rs
programs/dispute_resolver/: Cargo.toml  dispute_resolver.qedspec
programs/dispute_resolver/src/: events.rs  lib.rs
programs/dispute_resolver/src/instructions/: challenge_verdict.rs  mod.rs  record_verdict.rs  register_adjudicator.rs
programs/dispute_resolver/src/state/: adjudicator_config.rs  dispute_verdict.rs  mod.rs  treasury_vault.rs
programs/identity_registry/: Cargo.toml  identity_registry.qedspec
programs/identity_registry/src/: events.rs  lib.rs
programs/identity_registry/src/instructions/: adjust_open_challenge_count.rs  adjust_open_task_count.rs  append_runtime_attestation.rs  create_identity.rs  deposit_identity_bond.rs  emergency_rotate_authority.rs  finalize_authority_rotation.rs  initialize_guardian_set.rs  mod.rs  rotate_authority.rs  set_stake_active.rs  update_history_root.rs  update_policy_root.rs  withdraw_identity_bond.rs
programs/identity_registry/src/state/: agent_identity.rs  guardian_set.rs  identity_bond.rs  mod.rs  pending_authority_rotation.rs  runtime_attestation.rs
programs/proof_verifier/: Cargo.toml  proof_verifier.qedspec
programs/proof_verifier/src/: events.rs  lib.rs
programs/proof_verifier/src/identity_registry/: state.rs
programs/proof_verifier/src/instructions/: append_receipt_to_checkpoint.rs  checkpoint_history.rs  checkpoint_import.rs  initialize_checkpoint.rs  initialize_checkpoint_importer.rs  initialize_history_updater.rs  mod.rs  rotate_checkpoint.rs  verify_receipt_inclusion.rs
programs/proof_verifier/src/receipt_emitter/: state.rs
programs/proof_verifier/src/state/: checkpoint_importer.rs  history_checkpoint.rs  history_updater.rs  latest_checkpoint.rs  mod.rs
programs/receipt_emitter/: Cargo.toml  receipt_emitter.qedspec
programs/receipt_emitter/src/: events.rs  lib.rs
programs/receipt_emitter/src/instructions/: emit_audit_receipt.rs  emit_challenge_response.rs  emit_delegated_receipt.rs  emit_handoff_grant.rs  emit_receipt.rs  finalize_unanswered_challenge.rs  initialize_cpi_authority.rs  mod.rs
programs/receipt_emitter/src/state/: cpi_authority.rs  mod.rs  receipt_chain.rs  receipt_record.rs
programs/reputation_accumulator/: Cargo.toml  reputation_accumulator.qedspec
programs/reputation_accumulator/src/: lib.rs
programs/reputation_accumulator/src/identity_registry/: state.rs
programs/reputation_accumulator/src/instructions/: apply_reputation_receipt.rs  create_reputation_domain.rs  deprecate_domain.rs  initialize_domain_catalog.rs  mod.rs  register_domain.rs  write_domain_stats_snapshot.rs
programs/reputation_accumulator/src/receipt_emitter/: state.rs
programs/reputation_accumulator/src/state/: applied_reputation_receipt.rs  domain_catalog.rs  domain_stats_snapshot.rs  mod.rs  reputation_accumulator.rs
programs/task_registry/: Cargo.toml  task_registry.qedspec
programs/task_registry/src/: events.rs  lib.rs
programs/task_registry/src/instructions/: advance_receipt_chain.rs  create_society_world.rs  create_task.rs  mod.rs  sync_task_status.rs  update_society_world.rs
programs/task_registry/src/state/: applied_task_receipt.rs  mod.rs  society_world.rs  task_record.rs
public/: dashboard-data.json
scripts/: fix-program-client-dist-imports.mjs  generate-program-clients.mjs  local-runtime-plugin.ts  qedgen-e2e.mjs  snapshot.sh  surfpool-e2e.sh  sync-data.mjs
src/: App.tsx  index.css  main.tsx
tests/: agent_stake.ts  agent_stake_events.ts  audit_receipts.ts  hardening_w6_w7.ts  identity_roots.ts  identity_rotation.ts  live-simulation.test.ts  proof_verifier_events.ts  protocol_flow.ts  receipt_chain.ts  (+3 more)
(+151 files in other folders)
