[package]
name = "agent_stake"
version = "0.1.0"
description = "Trust Substrate stake and slashing program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_stake"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "dispute_resolver/idl-build",
    "identity_registry/idl-build",
    "receipt_emitter/idl-build",
    "trust_substrate_core/idl-build",
]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"
dispute_resolver = { path = "../dispute_resolver", features = ["cpi"] }
identity_registry = { path = "../identity_registry", features = ["cpi"] }
receipt_emitter = { path = "../receipt_emitter", features = ["cpi"] }
trust_substrate_core = { path = "../../crates/trust_substrate_core" }
