[package]
name = "attester_registry"
version = "0.1.0"
description = "Trust Substrate attester registry program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "attester_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "identity_registry/idl-build",
    "trust_substrate_core/idl-build",
]

[dependencies]
anchor-lang = "1.0.0"
identity_registry = { path = "../identity_registry", features = ["cpi"] }
trust_substrate_core = { path = "../../crates/trust_substrate_core" }
