[package]
name = "identity_registry"
version = "0.1.0"
description = "Trust Substrate identity registry program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
trust_substrate_core = { path = "../../crates/trust_substrate_core" }
