[package]
name = "receipt_emitter"
version = "0.1.0"
description = "Trust Substrate receipt emission program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "receipt_emitter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "identity_registry/idl-build",
    "task_registry/idl-build",
    "trust_substrate_core/idl-build",
]

[dependencies]
anchor-lang = "0.32.1"
identity_registry = { path = "../identity_registry", features = ["cpi"] }
task_registry = { path = "../task_registry", features = ["cpi"] }
trust_substrate_core = { path = "../../crates/trust_substrate_core" }

