[package]
name = "task_registry"
version = "0.1.0"
description = "Trust Substrate task registry program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "task_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "identity_registry/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
identity_registry = { path = "../identity_registry", features = ["cpi"] }
trust_substrate_core = { path = "../../crates/trust_substrate_core" }
